--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@google/generative-ai": "^0.24.1",
         "@huggingface/inference": "^4.7.1",
         "groq-sdk": "^0.30.0",
+        "lucide-react": "^0.542.0",
         "next": "15.5.1",
         "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "react-dom": "19.1.0",
+        "react-hot-toast": "^2.6.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
