feat: Implement palette generation from image upload
Added a major new feature allowing users to extract a 5-color palette by uploading an image. This provides a powerful alternative to text-based generation.

- Integrated the 'colorthief' library for client-side image color analysis.

- Created a dedicated 'ImageUploader' component with a file input and loading state.

- Refactored the image processing logic to use the core 'colorthief' library directly for improved stability and error handling.

- Added custom TypeScript declarations (.d.ts) for the 'colorthief' module.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "@geist-ui/core": "^2.3.8",
         "@google/generative-ai": "^0.24.1",
         "@huggingface/inference": "^4.7.1",
+        "color-thief-react": "^2.1.0",
+        "colorthief": "^2.6.0",
         "framer-motion": "^12.23.12",
         "groq-sdk": "^0.30.0",
         "lucide-react": "^0.542.0",
